--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+
+    <link href="styles/main_styles.css" rel="stylesheet">
+
 </head>
 <body>
     <h1>Wecome to our website</h1>
@@ -14,5 +17,6 @@
 </body>
 
 
-</footer>
+
+
 </html>
